@@ -289,6 +289,9 @@
       saveDocumentAs:,
       saveDocumentTo:
     );
+    Outlets = (
+      _window
+    );
     Super = NSObject;
   };
 
